--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -45,12 +45,13 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #3d7cff;
+  --ifm-color-primary-dark: #1d67ff;
+  --ifm-color-primary-darker: #0e5cff;
+  --ifm-color-primary-darkest: #0048dd;
+  --ifm-color-primary-light: #5d91ff;
+  --ifm-color-primary-lighter: #6c9cff;
+  --ifm-color-primary-lightest: #9cbcff;
+  --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1)
 }
