added swizzled Footer; some tags; replace png with mermaids

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -62,5 +62,41 @@
 }
 
 [data-theme='dark'] {
-  --docusaurus-highlighted-code-line-bg: rgb(217, 211, 211);
+  --docusaurus-highlighted-code-line-bg: rgb(89, 85, 85);
+}
+
+
+/* Style for JSON keys (properties) */
+.token.key {
+  color: #56b6c2; 
+}
+
+/* Style for JSON strings (values) */
+.token.value {
+  color: #98c379 !important; 
+}
+
+/* Style for JSON numbers */
+.token.number {
+  color: #d19a66; 
+}
+
+/* Style for JSON booleans (true, false) */
+.token.boolean {
+  color: #e06c75; 
+}
+
+/* Style for JSON null */
+.token.null-value {
+  color: #61afef; 
+}
+
+/* Style for punctuation (like brackets and commas) */
+.token.punctuation {
+  color: #abb2bf; 
+}
+
+/* Style for operator (colon) */
+.token.operator {
+  color: #56b6c2; 
 }
