Fixing tailwind preflight styles to be injected in head, removing it from @base import and gave h1-h6 and a tags default size/color styles.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,34 @@
 @tailwind components;
 @tailwind utilities;
 
+h1 {
+  @apply text-6xl;
+}
+
+h2 {
+  @apply text-4xl;
+}
+
+h3 {
+  @apply text-3xl;
+}
+
+h4 {
+  @apply text-2xl;
+}
+
+h5 {
+  @apply text-xl;
+}
+
+h6 {
+  @apply text-lg;
+}
+
+a {
+  @apply text-blue;
+}
+
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
