--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,8 +5,15 @@
 @tailwind components;
 @tailwind utilities;
 
+h1,
+h2,
+h3,
+h4 {
+  @apply font-bold;
+}
+
 h1 {
-  @apply text-6xl;
+  @apply text-5xl;
 }
 
 h2 {
