run eslint on code; fixed li, ul styles for content page

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -40,6 +40,14 @@ a {
   @apply text-blue;
 }
 
+.theme-doc-markdown ul {
+  @apply pl-8;
+} 
+
+.theme-doc-markdown li {
+  @apply list-disc; 
+}
+
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
